# Planly

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  scheduler.rs  windows_util.rs
src-tauri/src/commands/: export.rs  fonts.rs  groups.rs  images.rs  mod.rs  reminders.rs  tasks.rs
src/components/: ErrorBoundary.tsx
src/components/card/: CardContent.tsx  CardSearchPanel.tsx  FloatingCard.tsx
src/components/layout/: AppLayout.tsx  ColorPicker.tsx  Sidebar.tsx  TitleBar.tsx  TopBar.tsx  UndoToast.tsx
src/components/notes/: NoteEditor.tsx
src/components/reminders/: ReminderFormDialog.tsx
src/components/settings/: SettingsPage.tsx
src/components/tasks/: DeleteConfirmDialog.tsx  SubtaskItem.tsx  TaskCard.tsx  TaskDetailDrawer.tsx  TaskFormDialog.tsx
src/components/ui/: dialog.tsx  drawer.tsx  popover.tsx  select.tsx  sheet.tsx
src/components/views/: CalendarView.tsx  KanbanView.tsx  ListView.tsx
src/i18n/: translations.ts
src/lib/: cardWindows.ts  commands.ts  groupIcons.ts  types.ts  utils.ts
src/stores/: groupStore.ts  taskStore.ts  uiStore.ts
src/stores/__tests__/: groupStore.test.ts  taskStore.test.ts  uiStore.test.ts
